			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1673 2001/05/16 03:06:24 sakane Exp $

<200105>
Wed May 16 12:04:57 JST 2001 sakane@ydc.co.jp
	* sys/netinet6/ah_input.c:
	don't flip ip_id *back* in freebsd4.x case.
	reported by <ume@mahoroba.org>.

Mon May 14 23:01:30 JST 2001  itojun@iijlab.net
	* sys/netinet/in_gif.c, sys/netinet6/in6_gif.c: drop IFF_LINK0
	  (multi destination mode) support.

Mon May 14 00:42:52 JST 2001	suz@sdl.hitachi.co.jp
	* kame/kame/mld6query/mld6.c: fixed a bug in argument handling.
	from Mickael Hoerdt <hoerdt@clarinet.u-strasbg.fr>

2001-05-13  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi4/INSTALL: added a note about ppp.diff
	based on a comment from <murakami@pana.net>.

2001-05-10  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi4/usr.bin/telnet/commands.c (tn): corrected a loop for
	connect(2) after getaddrinfo(3).
	The fix was from <murakami@pana.net>

Wed May  9 20:15:22 JST 2001  itojun@iijlab.net
	* ping6/ping6.c: correct signal handling with
	  "ping6 -f <nonexisting peer>".  from hash@iij.ad.jp.

2001-05-07  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/bindtest: added supplement tests to see which sockets
	receive which packets.
	Two new option -1 and -2 were added to support TCP cases of the
	above test.
	Another new option -6 was also added to support the IPV6_V6ONLY
	option if available.
	* kame/kame/bindtest/test.sh: added new tests based on the above
	enhancement.

2001-05-07  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* sys/netinet6/natpt_{defs.h,trans.c}
	  Support EPSV command/response pair to/from PASV command/respons
	  translation.  You can use ftp from IPv6 client to IPv4 ftp
	  server, if it is passive mode.

2001-05-05  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* sys/netinet6/natpt_{log,trans}.c
	  Remove warning in compilation.

2001-05-05  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* sys/netinet6/natpt_*.[ch]
	* kame/natptconfig/*.[chly]
	- Remove the code which considered FAITH.